--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,10 +36,10 @@
 /* Animations */
 @keyframes orbit {
   from {
-    transform: rotate(0deg) translateX(var(--orbit-radius)) rotate(0deg);
+    transform: translate(-50%, -50%) translateX(var(--orbit-radius)) rotate(0deg);
   }
   to {
-    transform: rotate(360deg) translateX(var(--orbit-radius)) rotate(-360deg);
+    transform: translate(-50%, -50%) translateX(var(--orbit-radius)) rotate(360deg);
   }
 }
 
