--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import SolarSystem from '../components/SolarSystem.astro';
 ---
 
-<Layout title="Sistema Solar Interactivo">
+<Layout title="Sistema Solar Interactivo" currentPlanet="system">
 	<main class="h-screen">
 		<SolarSystem />
 	</main>
